tests/snapshots/help_test__help@shim_--help.snap
---
source: tests/help_test.rs
expression: snapshot
---
status = 0
stdout = '''
Generate shims for all managed commands

Usage: alt shim

Options:
  -h, --help  Print help
'''
stderr = ''
