tests/snapshots/help_test__help@shim_-h.snap
---
source: tests/help_test.rs
expression: snapshot
---
status = 0
stdout = '''
alt-shim 
Generate shims for all managed commands

USAGE:
    alt shim

OPTIONS:
    -h, --help    Print help information
'''
stderr = ''
