tests/snapshots/help_test__help@use_--help.snap
---
source: tests/help_test.rs
expression: snapshot
---
status = 0
stdout = '''
Switch the version of a command

Usage: alt use <command> [version]

Arguments:
  <command>  Command to switch the version of
  [version]  Version to use (optional)

Options:
  -h, --help  Print help

EXAMPLES:
    alt use node 8        Use version 8 of node
    alt use node          Prompt for a version of node to use
    alt use node system   Use the system version of node
'''
stderr = ''
